--- a/app/views/plannings/_edit.html.haml
+++ b/app/views/plannings/_edit.html.haml
@@ -165,6 +165,10 @@
                   %a.export_spreadsheet
                     %i.fa.fa-table.fa-fw
                     = t '.export.spreadsheet'
+                %li
+                  = link_to planning_path(@planning, format: 'excel', summary: true), target: :_blank do
+                    %i.fa.fa-table.fa-fw
+                    = t '.export.summary_spreadsheet'
                 %li.divider{role: "separator"}
                 %li
                   = link_to api_planning_calendar_path(@planning, api_key: current_user.api_key) do
