--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -86,19 +86,14 @@
         <% if @customer.is_editable? %>
           <% visit_width = {}
             visit_width[:ref] = 3 if @customer.enable_references
-            visit_width[:quantity] = 3 unless @customer.enable_orders
             visit_width[:tags] = 8
             visit_width[:duration] = 4
-            visit_width[:time_windows] = 16
-          %>
+            visit_width[:time_windows] = 16 %>
           <th data-sorter="false" class="visit columnSelector-disable" style="min-width:<%= visit_width.values.reduce(&:+) %>em;">
             <div class="col-title"><%= t 'activerecord.models.visit' %></div>
             <div id="visit-subtitles" style="width: 100%;">
               <% if @customer.enable_references %>
                 <div class="visit-subtitle" style="min-width: <%= visit_width[:ref] %>em;"><%= t 'activerecord.attributes.visit.ref_small' %></div>
-              <% end %>
-              <% unless @customer.enable_orders %>
-              <div class="visit-subtitle" style="width: <%= visit_width[:quantity] %>em;"><%= t '.quantity_small' %></div>
               <% end %>
               <div class="visit-subtitle" style="width: <%= visit_width[:tags] %>em;"><%= t 'activerecord.attributes.visit.tags' %></div>
 
@@ -176,8 +171,6 @@ controller.js(
   default_country: @customer.default_country,
   duration_default: @customer.visit_duration_time_with_seconds,
   url_click2call: current_user.link_phone_number,
-  enable_references: @customer.enable_references,
-  enable_orders: @customer.enable_orders,
-  disable_quantity: @customer.enable_orders || @customer.deliverable_units.size != 1
+  enable_references: @customer.enable_references
 )
 %>
