--- a/app/views/stops/_out_list.html.haml
+++ b/app/views/stops/_out_list.html.haml
@@ -33,7 +33,7 @@
             - if stop[:geocoded]
               %a.marker.btn.btn-default.btn-xs{href: "#", title: t("plannings.edit.marker_help")}>
                 %i.fa.fa-map-marker
-            .btn-group
+            .btn-group.route-select
               %button.btn.btn-default.btn-xs.dropdown-toggle{"data-toggle": "dropdown", title: t("plannings.edit.send_to_route_help"), type: "button"}
                 %i.fa.fa-truck-field.fa-fw
                 %span.caret
