--- a/app/views/plannings/_edit_head.html.haml
+++ b/app/views/plannings/_edit_head.html.haml
@@ -48,18 +48,20 @@
         %i.fa.fa-tachometer.fa-fw{"aria-hidden": "true"}>
         = "#{averages[:routes_speed_average]} #{averages[:prefered_unit]}/h"
     - averages[:total_quantities].each do |unit|
-      .col-xs-4.route-data-advanced{title: t("plannings.edit.quantity_help")}
-        .primary.route-info{class: ("danger" if unit[:out_of_capacity])}
-          %i.fa.fa-fw{class: unit[:unit_icon]}
-          - if unit[:pickup] != '0'
-            %i.fa.fa-fw.fa-up-long{title: t("plannings.edit.pickup_help")}
-            = unit[:pickup]
-          - if unit[:delivery] != '0'
-            - if unit[:pickup] != '0'
-              %i.fa.fa-fw.fa-down-long{title: t("plannings.edit.delivery_help")}
-            = unit[:delivery]
-          - if unit[:capacity]
-            = " / #{unit[:capacity]}"
-          /
-          - if unit[:label]
-            = " #{unit[:label]}"
+      - [:pickup, :delivery].each do |sym|
+        - if unit.fetch("has_#{sym}".to_sym)
+          .col-xs-4.route-data-advanced{title: [unit[:label], t("plannings.edit.quantity_help")].compact.join(' - ')}
+            .primary.route-info{class: ("danger" if unit[:out_of_capacity])}
+              %i.fa.fa-fw{class: unit[:unit_icon]}
+              - if sym == :pickup
+                %i.fa.fa-fw.fa-up-long{title: t("plannings.edit.pickup_help")}
+                = unit[:pickup]
+              - if sym == :delivery
+                - if unit[:has_pickup]
+                  %i.fa.fa-fw.fa-down-long{title: t("plannings.edit.delivery_help")}
+                = unit[:delivery]
+              - if unit[:capacity]
+                = "/ #{unit[:capacity]}"
+              /
+              - if unit[:label]
+                = "#{unit[:label]}"
