--- a/app/templates/stops/_show.mustache
+++ b/app/templates/stops/_show.mustache
@@ -157,6 +157,9 @@
     {{#no_path}}
       <li><i class="fa fa-road fa-fw" title="{{#i18n}}plannings.edit.error.no_path_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.no_path{{/i18n}}</li>
     {{/no_path}}
+    {{#out_of_skill}}
+      <li><i class="fa fa-tags fa-fw" title="{{#i18n}}plannings.edit.error.out_of_skill_help{{/i18n}}"></i> {{#i18n}}plannings.edit.error.out_of_skill{{/i18n}}</li>
+    {{/out_of_skill}}
   </ul>
 {{/error}}
 {{/visits}}
