Add store duration & allow to select the new stopstore to add

--- a/app/assets/stylesheets/plannings.css.scss
+++ b/app/assets/stylesheets/plannings.css.scss
@@ -858,7 +858,7 @@ $sidebar-margins: 10px;
                 padding-top: 7px;
               }
 
-              input, .fa-store {
+              input, .store {
                 margin: 0 5px;
               }
             }
