--- a/app/views/routes/_in_route.html.haml
+++ b/app/views/routes/_in_route.html.haml
@@ -78,7 +78,7 @@
                 .col-xs-2.d-flex.align-items-center.justify-content-center
                   - if route[:store_start]
                     - color = route[:color_fake] || route[:color] || 'black'
-                    %i.fa.fa-fw{class: (route[:store_start][:icon] ? route[:store_start][:icon] : 'fa-store'), style: "color: #{color};"}
+                    %i.store.fa.fa-fw{class: (route[:store_start][:icon] ? route[:store_start][:icon] : 'fa-store'), style: "color: #{color};"}
                 .col-xs-10.d-flex.align-items-center
                   .col-xs-12
                     .ml-0.ph-0.d-flex.align-items-center.justify-content-end{class: "#{('danger' if route[:store_start]&.[](:error))} #{('primary stop-info' if route[:start_with_service])}"}
@@ -108,10 +108,21 @@
                   %span.store-status{class: "stop-status-#{route[:store_start][:status_code]}", title: "#{route[:store_start][:status]}#{eta_statement}", style: ("display: none;" if !route[:store_start][:status])}
                   .btn-group.pull-right.stop-tools
                     - if @manage_planning[:manage_store]
-                      %a.marker_edit.btn.btn-default.btn-xs{href: "/stores/#{route[:store_start][:id]}/edit?back=true", title: t("plannings.edit.edit_store_help")}
-                        %i.fa.fa-pencil
-                    %a.marker.btn.btn-default.btn-xs{href: "#", title: t("plannings.edit.marker_help")}
-                      %i.fa.fa-map-marker
+                      .btn-group
+                        %a.marker_edit.btn.btn-default.btn-xs{href: "/stores/#{route[:store_start][:id]}/edit?back=true", title: t("plannings.edit.edit_store_help")}
+                          %i.fa.fa-pencil
+                    .btn-group
+                      %a.marker.btn.btn-default.btn-xs{href: "#", title: t("plannings.edit.marker_help")}
+                        %i.fa.fa-map-marker
+                    .dropdown.btn-group
+                      %button.btn.btn-default.btn-xs.dropdown-toggle{type: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false", title: t("plannings.edit.create_store_help")}
+                        %i.fa.fa-plus
+                      %ul.dropdown-menu.pull-right.store-dropdown{role: "menu"}
+                        - @available_stores.each do |store|
+                          %li
+                            %a.dropdown-item{href: "#", "data-route-id": route[:route_id], "data-store-id": store[:id], "data-store-name": store[:name], class: "store-option"}
+                              %i.fa.fa-fw{class: "#{store[:icon] || 'fa-store'}", style: "color: #{store[:color] || 'black'};"}
+                              = store[:name]
       = render partial: 'stops/list', locals: { route: route, summary: summary }
       %ul.stops.list-group{ style: ("display: none" if route[:hidden]) }
         %li.d-fake-flex.align-items-center.list-group-item{class: ('ui-state-error' if route[:store_stop]&.[](:error)), data: { store_id: route[:store_stop]&.[](:id)}.compact}
@@ -120,7 +131,7 @@
               .col-xs-2.d-flex.align-items-center.justify-content-center
                 - if route[:store_stop]
                   - color = route[:color_fake] || route[:color] || 'black'
-                  %i.fa.fa-fw{class: (route[:store_stop][:icon] || 'fa-store'), style: "color: #{color};"}
+                  %i.store.fa.fa-fw{class: (route[:store_stop][:icon] || 'fa-store'), style: "color: #{color};"}
               - if route[:end_time]
                 .col-xs-10
                   .col-xs-12
@@ -148,9 +159,18 @@
                 %span.store-status{class: "stop-status-#{route[:store_stop][:status_code]}", title: "#{route[:store_stop][:status]}#{eta_statement}", style: ("display: none;" if !route[:store_stop][:status])}
                 .btn-group.pull-right.stop-tools
                   - if @manage_planning[:manage_store]
-                    %a.marker_edit.btn.btn-default.btn-xs{href: "/stores/#{route[:store_stop][:id]}/edit?back=true", title: t("plannings.edit.edit_store_help")}
-                      %i.fa.fa-pencil
-                  %a.marker.btn.btn-default.btn-xs{href: "#", title: t("plannings.edit.marker_help")}
-                    %i.fa.fa-map-marker
-                  %a.marker_create_store.btn.btn-default.btn-xs{href: "#", title: t("plannings.edit.create_store_help")}
-                    %i.fa.fa-plus
+                    .btn-group
+                      %a.marker_edit.btn.btn-default.btn-xs{href: "/stores/#{route[:store_start][:id]}/edit?back=true", title: t("plannings.edit.edit_store_help")}
+                        %i.fa.fa-pencil
+                  .btn-group
+                    %a.marker.btn.btn-default.btn-xs{href: "#", title: t("plannings.edit.marker_help")}
+                      %i.fa.fa-map-marker
+                  .dropdown.btn-group
+                    %button.btn.btn-default.btn-xs.dropdown-toggle{type: "button", "data-toggle": "dropdown", "aria-haspopup": "true", "aria-expanded": "false", title: t("plannings.edit.create_store_help")}
+                      %i.fa.fa-plus
+                    %ul.dropdown-menu.pull-right.store-dropdown{role: "menu"}
+                      - @available_stores.each do |store|
+                        %li
+                          %a.dropdown-item{href: "#", "data-route-id": route[:route_id], "data-store-id": store[:id], "data-store-name": store[:name], class: "store-option"}
+                            %i.fa.fa-fw{class: "#{store[:icon] || 'fa-store'}", style: "color: #{store[:color] || 'black'};"}
+                            = store[:name]
