--- a/app/views/customers/_job.html.erb
+++ b/app/views/customers/_job.html.erb
@@ -11,8 +11,8 @@
       <span class="caret"></span>
     </button>
     <ul class="dropdown-menu" role="menu">
-      <li><%= link_to "/api/0.1/customers/"+customer.id.to_s+"/job/"+job.id.to_s do %><i class="fa fa-search fa-fw"></i> <%= t 'all.verb.show' %><% end %></li>
-      <li><%= link_to "/api/0.1/customers/"+customer.id.to_s+"/job/"+job.id.to_s, method: :delete do %><i class="fa fa-trash fa-fw"></i> <%= t 'all.verb.destroy' %><% end %></li>
+      <li><%= link_to "/api/0.1/customers/#{customer.id}/job/#{job.id}.json" do %><i class="fa fa-search fa-fw"></i> <%= t 'all.verb.show' %><% end %></li>
+      <li><%= link_to "/api/0.1/customers/#{customer.id}/job/#{job.id}", method: :delete do %><i class="fa fa-trash fa-fw"></i> <%= t 'all.verb.destroy' %><% end %></li>
     </ul>
   </div>
 <% end %>
